refactor: organizar lógica de botões e ajuste em estrutura de painel na interface